# ucentral-wifi

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.c  nl80211.c  nl80211.h  nl80211_copy.h  ubus.c  ucentral-wifi.uc  wifi.h
.github/workflows/: openwrt-ci.yml
